# cryptpad

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  Manual.MD  README.md  compose.yaml
.github/workflows/: ci.yml  pull_request.yml  push_to_main.yml
config/: config.js  sso.js
customize/: application_config.js  pages.js
customize/src/less2/include/: colortheme-dark.less
customize/translations/: messages.js.disabled
docker/cryptpad/: .bumpversion.toml  Dockerfile  docker-entrypoint.sh  versioning.md
docker/nginx/: Dockerfile  docker-entrypoint.sh  nginx.conf
docker/scripts/: generate-local-cert.sh  prepare-bind-mounts.sh
docs/plans/: 2026-03-18-cryptpad-local-compose.md  2026-03-18-cryptpad-local-design.md  2026-03-18-cryptpad-rasenmaeher-design.md  2026-03-18-cryptpad-rasenmaeher-integration.md
rmcryptpad/: .bumpversion.toml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
rmcryptpad/docker/: entrypoint-test.sh
rmcryptpad/src/rmcryptpad/: __init__.py  config.py  console.py
rmcryptpad/src/rmcryptpad/db/: __init__.py  base.py  dbinit.py  engine.py  errors.py  oidc_code.py  product.py  user.py
rmcryptpad/src/rmcryptpad/oidc/: __init__.py  keys.py  service.py
rmcryptpad/src/rmcryptpad/schema/: __init__.py  clients.py  contracts.py  interop.py
rmcryptpad/src/rmcryptpad/web/: application.py  clients.py  description.py  health.py  instructions.py  interop.py  oidc.py  security.py  usercrud.py
rmcryptpad/tests/: conftest.py  docker-compose.yml  test_clients.py  test_description.py  test_interop.py  test_oidc.py  test_orm.py  test_package.py  test_security.py  test_ui_static.py  test_usercrud.py
rmcryptpad/ui/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
rmcryptpad/ui/src/: App.test.tsx  App.tsx  i18n.ts  index.css  main.tsx
rmcryptpad/ui/src/components/: FeatureGuide.tsx  OnboardingGuide.tsx
rmcryptpad/ui/src/lib/: metadata.ts  metadata.tsx  public-path.test.ts  public-path.ts
rmcryptpad/ui/src/locales/: en.json  fi.json  sv.json
rmcryptpad/ui/src/pages/: HomePage.tsx
tests/: test_compose_smoke.sh  test_cryptpad_image.sh
