[tool.poetry]
name = "rmcryptpad"
version = "0.1.0"
description = "Deploy App integration layer for CryptPad"
authors = ["ElderX <elderx@example.com>"]
readme = "README.md"
packages = [{ include = "rmcryptpad", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115,<1.0"
pydantic = ">=2.10,<3.0"
pydantic-settings = ">=2.8,<3.0"
uvicorn = ">=0.34,<1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
