[tool.poetry]
name = "rmcryptpad"
version = "1.0.0+260614"
description = "Deploy App integration layer for CryptPad"
authors = ["ElderX <elderx@example.com>"]
readme = "README.md"
packages = [{ include = "rmcryptpad", from = "src" }]

[tool.poetry.scripts]
rmcryptpad = "rmcryptpad.console:rmcryptpad_cli"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = ">=45,<47"
fastapi = ">=0.115,<1.0"
filelock = "^3.19"
pydantic = ">=2.10,<3.0"
pydantic-settings = ">=2.8,<3.0"
psycopg2-binary = "^2.9"
sqlmodel = ">=0.0.24,<1.0"
uvicorn = ">=0.34,<1.0"

[tool.poetry.group.dev.dependencies]
httpx = ">=0.27,<1.0"
pytest = "^8.0"
pytest-asyncio = ">=1.2,<2.0"
pytest-docker = "^3.2"
detect-secrets = "^1.5"
bump-my-version = "^1.3"
pylint = "^3.3"
mypy = "^1.15"

[tool.pylint.messages_control]
disable = ["fixme", "W1202", "C0209", "E0402"]

[tool.pylint.design]
max-args = 10

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
